<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginInActivity">

    <!-- Login progress -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_user_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_log_in_side_margin"
        android:layout_marginLeft="@dimen/activity_log_in_side_margin"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/activity_log_in_side_margin"
        android:layout_marginRight="@dimen/activity_log_in_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_user_login"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_email_input"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="@color/strongGray"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_login">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="top"
                android:hint=" "
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_password_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_log_in_side_margin"
        android:layout_marginLeft="@dimen/activity_log_in_side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_log_in_side_margin"
        android:layout_marginRight="@dimen/activity_log_in_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_box">

        <TextView
            android:id="@+id/text_user_password_login"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password_input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            app:boxBackgroundColor="@color/strongGray"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_password_login">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/activity_log_in_side_margin"
        android:layout_marginLeft="@dimen/activity_log_in_side_margin"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="@dimen/activity_log_in_side_margin"
        android:layout_marginRight="@dimen/activity_log_in_side_margin"
        android:background="@color/colorBlueSh1"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/colorWhiteSh1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_box" />

    <Button
        android:id="@+id/button_register"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/activity_log_in_side_margin"
        android:layout_marginLeft="@dimen/activity_log_in_side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_log_in_side_margin"
        android:layout_marginRight="@dimen/activity_log_in_side_margin"
        android:background="@android:color/white"
        android:text="@string/action_register"
        android:textColor="@color/colorBlueSh1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>